# devx

./: index.html  package-lock.json  package.json  server.html  server.js  style.css
public/: splash.html
public/servers/: server.html
src/: App.jsx  defaults.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/sysmin/: icecap-list.json  portfolio-boot.json  portfolio-list.json
src-tauri/src/: api.rs  args.rs  lib.rs  main.rs  message.rs
src/components/: Builder.jsx  Creator.jsx  Exporter.jsx  MainLayout.jsx  Navigation.jsx  Package.jsx  Server.jsx  Sysmin.jsx  Theme.jsx  Toolbar.jsx
src/styles/: button.css  field.css  form.css  layout.css  navigation.css  output.css  toolbar.css
