[package]
name = "devx"
version = "0.1.7"
description = "Developer toolset for working web development"
authors = ["Peter Donabed Nøbbe"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.6.7", features = [ "shell-open"] }
anyhow = "1.0.70"
shellexpand = "3.1.0"
sysinfo = "0.35.2"
dirs = "6.0.0"
zip = "4.2.0"
ftp = "3.0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
